# loregui

./: .gitignore  AGENT-SETUP.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES-FRONTEND.md  THIRD-PARTY-LICENSES-RUST.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/lore-vm/: Cargo.toml
crates/lore-vm/examples/: live_server_client.rs
crates/lore-vm/src/: api.rs  backend.rs  cli_backend.rs  client_backend.rs  collect.rs  dispatch.rs  error.rs  global.rs  lib.rs  model.rs
crates/lore-vm/src/ops/: mod.rs  paths.rs
crates/lore-vm/src/ops/auth/: clear.rs  list.rs  local_user_info.rs  login_interactive.rs  login_with_token.rs  logout.rs  mod.rs  resolve_user_info.rs
crates/lore-vm/src/ops/branch/: archive.rs  create.rs  diff.rs  info.rs  latest_list.rs  list.rs  merge_abort.rs  merge_into.rs  merge_resolve.rs  merge_resolve_mine.rs  merge_resolve_theirs.rs  merge_restart.rs  merge_start.rs  merge_unresolve.rs  metadata_clear.rs  metadata_get.rs  metadata_set.rs  mod.rs  protect.rs  push.rs  reset.rs  switch.rs  unprotect.rs
crates/lore-vm/src/ops/dependency/: dependency_add.rs  dependency_list.rs  dependency_remove.rs  mod.rs
crates/lore-vm/src/ops/file/: diff.rs  dirty.rs  dirty_copy.rs  dirty_move.rs  dump.rs  hash.rs  history.rs  info.rs  metadata_clear.rs  metadata_get.rs  metadata_list.rs  metadata_set.rs  mod.rs  obliterate.rs  reset.rs  reset_to_last_merged.rs  stage.rs  stage_merge.rs  stage_move.rs  unstage.rs  write.rs
crates/lore-vm/src/ops/host_store/: mod.rs  prepare.rs  probe.rs
crates/lore-vm/src/ops/layer/: layer_add.rs  layer_list.rs  layer_list_staged.rs  layer_remove.rs  mod.rs
crates/lore-vm/src/ops/link/: add.rs  list.rs  list_staged.rs  mod.rs  remove.rs  update.rs
crates/lore-vm/src/ops/lock/: file_acquire.rs  file_acquire_as_owner.rs  file_message_send.rs  file_query.rs  file_release.rs  file_status.rs  mod.rs
crates/lore-vm/src/ops/notification/: mod.rs  subscribe.rs  unsubscribe.rs
crates/lore-vm/src/ops/relay/: mod.rs  relay_open.rs
crates/lore-vm/src/ops/repository/: clone.rs  config_get.rs  create.rs  create_with_metadata.rs  delete.rs  dump.rs  flush.rs  gc.rs  info.rs  instance_list.rs  instance_prune.rs  list.rs  metadata_clear.rs  metadata_get.rs  metadata_set.rs  mod.rs  release.rs  repository_update_path.rs  status.rs  store_immutable_query.rs  urc_status.rs  verify_fragment.rs  verify_state.rs
crates/lore-vm/src/ops/revision/: activity_report.rs  amend.rs  bisect.rs  cherry_pick.rs  cherry_pick_abort.rs  cherry_pick_local.rs  cherry_pick_resolve.rs  cherry_pick_resolve_mine.rs  cherry_pick_resolve_theirs.rs  cherry_pick_restart.rs  cherry_pick_unresolve.rs  commit.rs  commit_with_metadata.rs  diff.rs  find.rs  find_local.rs  history.rs  info.rs  metadata_clear.rs  metadata_get.rs  metadata_list.rs  metadata_set.rs  mod.rs  restore.rs  revert.rs  revert_abort.rs  revert_local.rs  revert_resolve.rs  revert_resolve_mine.rs  revert_resolve_theirs.rs  revert_restart.rs  revert_unresolve.rs  sync.rs
crates/lore-vm/src/ops/service/: mod.rs  restart.rs  start.rs  stop.rs
crates/lore-vm/src/ops/shared_store/: create.rs  info.rs  mod.rs  set_use_automatically.rs
crates/lore-vm/src/ops/storage/: close.rs  copy.rs  flush.rs  get.rs  get_file.rs  get_metadata.rs  mod.rs  mutable_compare_and_swap.rs  mutable_list.rs  mutable_load.rs  mutable_store.rs  obliterate.rs  open.rs  put.rs  put_file.rs  upload.rs
crates/lore-vm/tests/: auth_local_user_info.rs  auth_login_with_token.rs  branch_create.rs  branch_info.rs  branch_latest_list.rs  branch_list.rs  branch_merge_start.rs  branch_switch.rs  e2e_lifecycle.rs  file_dirty_move.rs  file_metadata_get.rs  file_unstage.rs  file_write.rs  integration_roundtrip.rs  link_remove.rs  lock_file_acquire_as_owner.rs  lock_file_query.rs  lock_file_release.rs  remote_multiuser.rs  repository_create.rs  repository_create_with_metadata.rs  resolve_user_info.rs  revision_cherry_pick_restart.rs  revision_info.rs  revision_revert_local.rs  revision_sync.rs  service_unix_smoke.rs  stage_real_flow.rs  storage_disk_roundtrip.rs  storage_mutable_roundtrip.rs  storage_obliterate_copy_errors.rs  storage_remote_backend.rs
crates/lorevm-cli/: Cargo.toml
crates/lorevm-cli/src/: main.rs
crates/lorevm-cli/tests/: cli_plumbing.rs
crates/lorevm-ffi/: Cargo.toml
crates/lorevm-ffi/src/: lib.rs
crates/lorevm-ffi/tests/: smoke.rs
docs/: COMMAND-PALETTE-PLAN.md  COMMERCIAL-ADDONS.md  DESIGN-SYSTEM.md  DESKTOP-CLIENT-FEATURES.md  EXPERT-AGENTS.md  IMPLEMENTATION-PLAN.md  INFORMATION-ARCHITECTURE.md  MOBILE-FEASIBILITY.md  PIPELINE-INTEGRATION.md  REMOTE-QA.md  RUNNERS_V1.md  host-server-sidecar.md  jira-subtasks.tsv  live-server-client-spike.md  ue-lorevm-bridge-spike.md  uefn-rc-integration-spike.md
e2e/: README.md  package.json  wdio.conf.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
lore-mcp/: README.md  generate_catalog.py  lore-tools.json  requirements.txt  server.py
scripts/: check-agent-setup.py  check-open-boundary.sh  create_subtasks.py  exact-pin-authless-contract.mjs  exact-pin-authless-contract.test.mjs  exact-pin-service-cwd-canary.sh  exact-pin-service-cwd-canary.test.sh  gen-licenses.sh  live-server-client.sh  release-supply-chain.mjs  release-supply-chain.test.mjs  remote-multiuser-qa.sh  upstream-lore-parity.mjs  upstream-lore-parity.test.mjs  validate.py  verify-sidecar.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
src-tauri/binaries/: README.md
src-tauri/icons/: icon.icns
src-tauri/resources/host/: server.crt  server.key
src-tauri/src/: commands.rs  context.rs  desktop.rs  ipc_harness_tests.rs  ipc_smoke.rs  lan_discovery.rs  lib.rs  server_host.rs  settings.rs  tray.rs
src-tauri/src/operations/: subscribe.rs  unsubscribe.rs
vscode-extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
website/: .vade-report  mdx-components.tsx  (+3 more)
(+348 files in other folders)
