[workspace]
resolver = "2"
members = ["crates/lore-vm", "crates/lorevm-cli", "crates/lorevm-ffi", "src-tauri"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/BiloxiStudios/loregui"
authors = ["Biloxi Studios Inc."]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "sync"] }
tracing = "0.1"

# Lore's own API library — pinned to v0.8.5 tag. Pre-1.0, so any bump is a
# deliberate, manager-owned PR. SBAI-3685 / SBAI-3700 / SBAI-5434.
lore = { git = "https://github.com/EpicGames/lore.git", tag = "v0.8.5" }

# REQUIRED: upstream `lore` patches quinn-proto to a vendored fork that adds
# `TransportErrorCode::is_crypto()`. A [patch] does NOT propagate through a git
# dependency, so without replicating it here `lore-transport` fails to compile
# ("no method named `is_crypto`"). Same fork, same tag, inside the lore repo.
# Every consumer of the `lore` crate needs this. SBAI-3685 / SBAI-5434.
[patch.crates-io]
quinn-proto = { git = "https://github.com/EpicGames/lore.git", tag = "v0.8.5" }
