[workspace]
resolver = "2"
members = ["crates/lore-vm", "crates/lorevm-cli", "crates/lorevm-ffi", "src-tauri"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/BiloxiStudios/loregui"
authors = ["Biloxi Studios Inc."]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "sync"] }
tracing = "0.1"

# Lore's own API library — pinned by exact rev. Pre-1.0, so any bump is a
# deliberate, manager-owned PR. SBAI-3685 / SBAI-3700 / SBAI-5434 / SBAI-5473 / SBAI-5488 / SBAI-5490.
# 826ad5d2 = authless user-info parity: exchange operations return typed
# NotSupported (code 18), and user-info operations forward that error unchanged.
lore = { git = "https://github.com/EpicGames/lore.git", rev = "826ad5d20ff4f5814101c946df127cef8253ada3" }

# REQUIRED: upstream `lore` patches quinn-proto to a vendored fork that adds
# `TransportErrorCode::is_crypto()`. A [patch] does NOT propagate through a git
# dependency, so without replicating it here `lore-transport` fails to compile
# ("no method named `is_crypto`"). Same fork, same exact commit, inside the
# lore repo. Every consumer of the `lore` crate needs this. SBAI-3685 / SBAI-5434 / SBAI-5473 / SBAI-5488 / SBAI-5490.
[patch.crates-io]
quinn-proto = { git = "https://github.com/EpicGames/lore.git", rev = "826ad5d20ff4f5814101c946df127cef8253ada3" }
