[package]
name = "loregui"
description = "A cross-platform desktop GUI for the Lore version-control system."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "loregui"

[lib]
name = "loregui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# Real-directory + symlink regression tests for the working-tree path guard
# (path-traversal fix, fix/loregui-path-traversal-rce).
tempfile = "3"
# `tauri/test` exposes `MockRuntime`, `mock_builder`, `mock_context`,
# `noop_assets`, `get_ipc_response`, `INVOKE_KEY` — used by the in-crate IPC
# harness (`src/ipc_harness_tests.rs`). Test-only; not in the shipped binary.
tauri = { version = "2", features = ["test"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
# In-app auto-update (SBAI-4040). Pairs with `plugins.updater` in tauri.conf.json
# and `bundle.createUpdaterArtifacts`. release.yml signs the update artifacts with
# TAURI_SIGNING_PRIVATE_KEY and publishes `latest.json` to the GitHub Release.
tauri-plugin-updater = "2"
# downloadAndInstall on Windows/Linux replaces the running binary, then we relaunch.
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lore-vm = { path = "../crates/lore-vm" }

# LAN auto-discovery of lore servers (SBAI-4073). Pure-Rust mDNS/zeroconf — the
# same crate studiobrain-model-manager uses for gateway-cluster discovery. No
# system daemon (Bonjour/Avahi) required; works on Windows/macOS/Linux.
mdns-sd = "0.13"
# Pick a reachable LAN IPv4 to advertise (filter loopback/virtual NICs).
if-addrs = "0.13"
# Self-signed TLS cert generation for the hosted loreserver's QUIC endpoint
# (SBAI-4087). Generates a cert+key pair on first host and caches it under the
# app data dir so packaged installs never need the lore dev checkout.
rcgen = "0.13"

[features]
# Forward to lore-vm so the whole app can switch backends from one flag.
# Default to the in-process backend: no `lore` CLI subprocess required.
default = ["client-backend"]
cli-backend = ["lore-vm/cli-backend"]
client-backend = ["lore-vm/client-backend"]
