[package]
name = "lore-vm"
description = "Reusable view-model core over the Lore VCS client. GUI-agnostic; consumed by loregui (standalone) and StudioBrain's desktop app."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lore = { workspace = true }

[features]
default = ["cli-backend"]
cli-backend = []
client-backend = []
